# PyPythia

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  generate_api_docs.py  index.html  mkdocs.yml  msa.py  prediction.py  prediction_no_install.py  predictor.pckl  predictor.py  pyproject.toml  raxmlng.py  raxmlng_parser.py  requirements.txt  setup.cfg  sitemap.xml  utils.py  versions.json
.0.0/api/raxmlng/: index.html
.0.0/install/: index.html
.0.0/search/: search_index.json
.github/actions/setup-lightgbm/: action.yml
.github/actions/setup-raxmlng/: action.yml
.github/actions/test-pythia-cli/: action.yml
.github/workflows/: dev-docs.yml  docs.yml  release-docs.yml  test-pythia.yml
1.0.0/: 404.html  index.html  objects.inv
1.0.0/api/config/: index.html
1.0.0/api/custom_errors/: index.html
1.0.0/api/custom_types/: index.html
1.0.0/api/msa/: index.html
1.0.0/api/prediction/: index.html
1.0.0/api/predictor/: index.html
1.0.0/api/raxmlng/: index.html
1.0.0/install/: index.html
1.0.0/search/: search_index.json
1.0.0/usage/: index.html
2.0.0/: 404.html  conf.py  index.html  objects.inv  sitemap.xml
2.0.0/api/config/: index.html
2.0.0/api/custom_errors/: index.html
2.0.0/api/custom_types/: index.html
2.0.0/api/msa/: index.html
2.0.0/api/prediction/: index.html
2.0.0/api/predictor/: index.html
2.0.0/api/raxmlng/: index.html
2.0.0/install/: index.html
2.0.0/search/: search_index.json
2.0.0/usage/: index.html
api/config/: index.html
api/custom_errors/: index.html
api/custom_types/: index.html
api/msa/: index.html
api/prediction/: index.html
api/predictor/: index.html
api/raxmlng/: index.html
dev/: 404.html  index.html  sitemap.xml
dev/api/config/: index.html
dev/api/custom_errors/: index.html
dev/api/custom_types/: index.html
dev/api/msa/: index.html
dev/api/prediction/: index.html
dev/api/predictor/: index.html
dev/api/raxmlng/: index.html
dev/install/: index.html
dev/search/: search_index.json
dev/usage/: index.html
docs/: index.md  install.md  usage.md
docs/api/: config.md  custom_errors.md  custom_types.md  logger.md  main.md  msa.md  prediction.md  predictor.md  raxmlng.md
etc/: environment.yml
examples/: prim.phy
install/: index.html
master/: 404.html  index.html  sitemap.xml
master/api/config/: index.html
master/api/custom_errors/: index.html
master/api/custom_types/: index.html
master/api/msa/: index.html
master/api/prediction/: index.html
master/api/predictor/: index.html
master/api/raxmlng/: index.html
master/install/: index.html
master/search/: search_index.json
master/usage/: index.html
pyphypred/: msa.py  prediction.py  predictor.py  raxmlng.py  raxmlng_parser.py  utils.py
pypythia/: __init__.py  config.py  custom_errors.py  custom_types.py  logger.py  main.py  msa.py  prediction.py  predictor.pckl  predictor.py  raxmlng.py  raxmlng_parser.py  utils.py
pypythia/predictors/: README.md  latest.pckl  latest.txt  predictor_lgb_v1.0.0.pckl  predictor_lgb_v1.1.0.pckl  predictor_lgb_v1.2.0.pckl
search/: search_index.json
tests/: conftest.py  fixtures.py  test_config.py  test_msa.py  test_prediction.py  test_predictor.py  test_raxmlng.py  test_raxmlng_parser.py  test_utils.py
tests/data/: msa_test_data.parquet  msa_test_data_linux.parquet  msa_test_data_macOS.parquet
tests/data/AA/: 0.phy  1.phy  2.phy  3.phy  4.phy
tests/data/DNA/: 0.fasta  0.phy  0.reduced.phy  1.phy  1.reduced.phy  2.phy  3.phy  3_taxa_msa.fasta  4.phy  4.reduced.phy  5.phy  small.fasta  small.reduced.phy
tests/data/MORPH/: 0.phy  0.reduced.phy  1.phy  1.reduced.phy
tests/data/trees/: many.trees
usage/: index.html
