[metadata]
name = PyPythia
description = Lightweight python library for predicting the difficulty of alignments in phylogenetics
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tschuelia/PyPythia
author = Julia Haag
author_email = julia.haag@h-its.org
version = 2.0.0
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
include_package_data = true
install_requires =
    pandas
    biopython
    lightgbm >= 4.4
    numpy >= 2.0
    shap >= 0.41
    matplotlib
    loguru

python_requires = >=3.7
package_dir=
    =.
packages = find:

[options.package_data]
* = predictors/*.txt

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    pythia = pypythia.main:main
